--- a/public/css/index.css
+++ b/public/css/index.css
@@ -143,3 +143,36 @@ body {
     padding: 12px;
   }
 }
+
+/* Apex Chart */
+.chart-container {
+    max-width: 100%;
+    height: auto;
+}
+
+#chart {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    animation: fadeInChart 0.5s ease-in forwards;
+}
+
+@keyframes fadeInChart {
+    to {
+        opacity: 1;
+    }
+}
+
+@media (max-width: 768px) {
+    .chart-container {
+        min-height: 300px;
+        max-height: 300px;
+    }
+}
+
+@media (max-width: 576px) {
+    .chart-container {
+        min-height: 250px;
+        max-height: 250px;
+    }
+}
